# JKQtPlotter

./: .gitignore  .travis.yml  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Doxyfile  JKQtFastPlotterBuildAllExamples.pro  JKQtPlotterAppveyorBuild.pro  JKQtPlotterBuildAllExamples.pro  JKQtPlotterBuildLibsOnly.pro  README.md  SECURITY.md  _j_k_q_t_c_make_fetch_content_example.html  _j_k_q_t_c_make_link_example.html  _j_k_q_t_fast_plotter_test.html  _j_k_q_t_math_text_render_cmd_line_tool.html  _j_k_q_t_math_text_simple_example.html  _j_k_q_t_math_text_test_app.html  _j_k_q_t_p_parametrized_vector_field_graph_example.html  _j_k_q_t_plotter_advanced_line_and_fill_styling.html  _j_k_q_t_plotter_barcharts.html  _j_k_q_t_plotter_barcharts_custom_draw_functor.html  _j_k_q_t_plotter_barcharts_error_bars.html  _j_k_q_t_plotter_barcharts_functor_filling.html  _j_k_q_t_plotter_barcharts_two_color_filling.html  _j_k_q_t_plotter_basic_j_k_q_t_p_datastore.html  _j_k_q_t_plotter_basic_j_k_q_t_p_datastore_iterators.html  _j_k_q_t_plotter_basic_j_k_q_t_p_datastore_regression.html  _j_k_q_t_plotter_basic_j_k_q_t_p_datastore_statistics.html  _j_k_q_t_plotter_basic_j_k_q_t_p_datastore_statistics2_d.html  _j_k_q_t_plotter_basic_j_k_q_t_p_datastore_statistics_grouped_stat.html  _j_k_q_t_plotter_boxplot_styling.html  _j_k_q_t_plotter_boxplots_graphs.html  _j_k_q_t_plotter_contour_plot.html  _j_k_q_t_plotter_date_time_axes.html  _j_k_q_t_plotter_distribution_plot.html  _j_k_q_t_plotter_doc_image_render_cmd_line_tool.html  _j_k_q_t_plotter_error_bar_styles.html  _j_k_q_t_plotter_eval_curves.html  _j_k_q_t_plotter_filled_graphs.html  (+2789 more)
ci/test_project/: CMakeLists.txt  formwithjkqtplotter.cpp  formwithjkqtplotter.ui  main.cpp
examples/: CMakeLists.txt  README.md
examples/advancedlineandfillstyling/: CMakeLists.txt  README.md  advancedlineandfillstyling.cpp  advancedlineandfillstyling.pro  advancedlineandfillstyling_and_lib.pro
examples/advplotstyling/: CMakeLists.txt  README.md  advplotstyling.cpp  advplotstyling.pro  advplotstyling_and_lib.pro
examples/barchart/: CMakeLists.txt  README.md  barchart.cpp  barchart.pro  barchart_and_lib.pro
examples/barchart_customdrawfunctor/: CMakeLists.txt  README.md  barchart_customdrawfunctor.cpp
examples/barchart_errorbars/: CMakeLists.txt  README.md  barchart_errorbars.cpp
examples/barchart_functorfill/: CMakeLists.txt  README.md  barchart_functorfill.cpp
examples/barchart_twocolor/: CMakeLists.txt  README.md  barchart_twocolor.cpp
examples/boxplot/: CMakeLists.txt  README.md  boxplot.cpp  boxplot.pro  boxplot_and_lib.pro
examples/cmake_fetchcontent_example/: CMakeLists.txt  README.md
examples/cmake_link_example/: CMakeLists.txt  README.md  simpletest.cpp
examples/contourplot/: CMakeLists.txt  README.md  contourplot.cpp  contourplot.pro  contourplot_and_lib.pro  contourplotanimator.cpp  contourplotanimator.h
examples/datastore/: CMakeLists.txt  README.md  datastore.cpp  datastore.pro  datastore_and_lib.pro
examples/datastore_groupedstat/: CMakeLists.txt  README.md  datastore_groupedstat.cpp  datastore_groupedstat.pro  datastore_groupedstat_and_lib.pro
examples/datastore_iterators/: CMakeLists.txt  README.md  datastore_iterators.cpp  datastore_iterators.pro  datastore_iterators_and_lib.pro
examples/datastore_regression/: CMakeLists.txt  README.md  datastore_regression.cpp  datastore_regression.pro  datastore_regression_and_lib.pro
examples/datastore_statistics/: CMakeLists.txt  README.md  datastore_statistics.cpp  datastore_statistics.pro  datastore_statistics_and_lib.pro
examples/datastore_statistics_2d/: CMakeLists.txt  README.md  datastore_statistics_2d.cpp  datastore_statistics_2d.pro  datastore_statistics_2d_and_lib.pro
examples/dateaxes/: CMakeLists.txt  README.md  dateaxes.cpp  dateaxes.pro  dateaxes.qrc  dateaxes_and_lib.pro
examples/distributionplot/: CMakeLists.txt  README.md  test_distributionplot.cpp  test_distributionplot.pro  test_distributionplot_and_lib.pro
examples/errorbarstyles/: CMakeLists.txt  README.md  errorbarstyles.cpp  errorbarstyles.pro  errorbarstyles_and_lib.pro
examples/evalcurve/: CMakeLists.txt  README.md  evalcurve.cpp  evalcurve.pro  evalcurve_and_lib.pro
examples/filledgraphs/: CMakeLists.txt  README.md  filledgraphs.cpp  filledgraphs.pro  filledgraphs_and_lib.pro
examples/filledgraphs_errors/: CMakeLists.txt  README.md  filledgraphs_errors.cpp
examples/financialgraphs/: CMakeLists.txt  README.md  financialgraphs.cpp
examples/functionplot/: CMakeLists.txt  README.md  functionplot.cpp  functionplot.pro  functionplot_and_lib.pro
examples/geo_arrows/: CMakeLists.txt  README.md  geo_arrows.cpp  geo_arrows.pro  geo_arrows_and_lib.pro
examples/geo_bezier/: CMakeLists.txt  README.md  geo_bezier.cpp
examples/geo_coordinateaxis0/: CMakeLists.txt  README.md  geo_coordinateaxis0.cpp
examples/geo_simple/: CMakeLists.txt  README.md  geo_simple.cpp  geo_simple.pro  geo_simple_and_lib.pro
examples/geometric/: CMakeLists.txt  README.md  geometric.cpp  geometric.pro  geometric_and_lib.pro
examples/graphlabels/: CMakeLists.txt  README.md  graphlabels.cpp
examples/imageplot/: CMakeLists.txt  README.md  imageplot.cpp  imageplot.pro
examples/imageplot_cimg/: CMakeLists.txt  README.md  imageplot_cimg.cpp  imageplot_cimg.pro  imageplot_cimg_and_lib.pro
examples/imageplot_modifier/: CMakeLists.txt  README.md  imageplot_modifier.cpp  imageplot_modifier.pro  imageplot_modifier_and_lib.pro
examples/imageplot_nodatastore/: CMakeLists.txt  README.md  imageplot_nodatastore.cpp  imageplot_nodatastore.pro  imageplot_nodatastore_and_lib.pro
examples/imageplot_opencv/: CMakeLists.txt  README.md  imageplot_opencv.cpp  imageplot_opencv.pro  (+1 more)
lib/: CMakeLists.txt  README.md  common.pri  jkqtcommon.pri  jkqtcommon_statistics_and_math.pri  jkqtfastplotter.pri  jkqtfastplotterlib.pro  jkqtmath.pri  jkqtmathtext.pri  jkqtmathtext_with_xits.pri  jkqtpcommon.pri  jkqtplotter.pri  jkqtplotter_pch.pri  jkqtplotter_version.h.in  jkqtplotterlib.pro
tests/: CMakeLists.txt
tools/: CMakeLists.txt
(+1631 files in other folders)
