cmake_minimum_required(VERSION 3.16)



message( STATUS )
message( STATUS "=============================================================================" )
message( STATUS "== JKQTPlotterLib Build Information                                        ==" )
message( STATUS "=============================================================================" )
message( STATUS "Version:             ${PROJECT_VERSION}")
message( STATUS "Build type:          ${CMAKE_BUILD_TYPE}")
message( STATUS "Build types:         ${CMAKE_CONFIGURATION_TYPES}")
message( STATUS "Using CMake:         ${CMAKE_VERSION}")
message( STATUS "        Generator:   ${CMAKE_GENERATOR}")
message( STATUS "Using compiler:      ${CMAKE_CXX_COMPILER_ID} ${CMAKE_CXX_COMPILER_VERSION}, platform: ${CMAKE_CXX_PLATFORM_ID}" )
message( STATUS "C++ Standard:        C++ ${JKQtPlotter_QT_CXX_STANDARD}, required: ${JKQtPlotter_QT_CXX_STANDARD_REQUIRED}" )
message( STATUS "LIB-Architecture:    CXX: ${CMAKE_CXX_LIBRARY_ARCHITECTURE} / BASE: ${CMAKE_LIBRARY_ARCHITECTURE}" )
message( STATUS "bit depth:           ${JKQtPlotter_BIT_DEPTH} bit" )
message( STATUS "System Name:         ${CMAKE_SYSTEM_NAME}" )
message( STATUS "Processor Name:      ${CMAKE_SYSTEM_PROCESSOR}" )
message( STATUS "Using Qt:            ${QT_VERSION}" )
message( STATUS "                       [at ${QT_DIR}]" )
if(JKQtPlotter_BUILD_INCLUDE_XITS_FONTS)
  message( STATUS "XITS fonts:          LINKED IN" )
else()
  message( STATUS "XITS fonts:          NOT AVAILABLE IN LIB" )
endif(JKQtPlotter_BUILD_INCLUDE_XITS_FONTS)
if(${JKQtPlotter_HAS_NO_PRINTER_SUPPORT})
  message( STATUS "Print support:       OFF" )
else()
  message( STATUS "Print support:       ON" )
endif()
if (JKQtPlotter_BUILD_WITH_PRECOMPILED_HEADERS)
  message( STATUS "Precompiled Header:  ON" )
else()
  message( STATUS "Precompiled Header:  OFF")
endif()
message( STATUS "Installing to:       ${CMAKE_INSTALL_PREFIX}" )
message( STATUS "=============================================================================" )
message( STATUS )

message( STATUS )
message( STATUS "............................................................................." )
message( STATUS ".. BUILDING LIBRARIES" )
message( STATUS "............................................................................." )


configure_file(${CMAKE_CURRENT_LIST_DIR}/jkqtplotter_version.h.in
               ${CMAKE_CURRENT_BINARY_DIR}/jkqtplotter_version.h)


include_directories(.)

add_subdirectory(jkqtcommon)
add_subdirectory(jkqtmath)
add_subdirectory(jkqtmathtext)
add_subdirectory(jkqtfastplotter)
add_subdirectory(jkqtplotter)
